--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="tgiftstest_bot" data-size="large" data-auth-url="https://www.google.com" data-request-access="write"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
